<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wangyi.UIview.widget.view.ArrowView
        android:id="@+id/left_arrow"
        android:layout_width="@dimen/icon_menu_width"
        android:layout_height="@dimen/icon_menu_width"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/padding_step2"
        android:onClick="OnLeftArrowClick"
        android:visibility="gone" />

    <com.wangyi.UIview.widget.view.ArrowView
        android:id="@+id/right_arrow"
        android:layout_width="@dimen/icon_menu_width"
        android:layout_height="@dimen/icon_menu_width"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/padding_step2"
        android:onClick="OnRightArrowClick"
        android:visibility="gone" />

    <ViewAnimator
        android:id="@+id/bottomMenus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lowerMenus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottombar_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_lowerbutton"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/showOutlineAction"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_action_outline" />

            <SeekBar
                android:id="@+id/pageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:paddingBottom="0dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="0dp" />

            <TextView
                android:id="@+id/pageNumber"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="100 / 100"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/editAnnotButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/edit_annotations"
                android:onClick="OnEditAnnotButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_annotation"
                android:visibility="gone" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/Annot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottombar_height"
            android:background="@drawable/bg_lowerbutton">

            <ImageButton
                android:id="@+id/cancelAnnotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAnnotButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_action_content_remove" />

            <ImageButton
                android:id="@+id/highlightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/underlineButton"
                android:background="#00000000"
                android:contentDescription="@string/highlight"
                android:onClick="OnHighlightButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_highlight" />

            <ImageButton
                android:id="@+id/underlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/strikeOutButton"
                android:background="#00000000"
                android:contentDescription="@string/underline"
                android:onClick="OnUnderlineButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_underline" />

            <ImageButton
                android:id="@+id/strikeOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/inkButton"
                android:background="#00000000"
                android:contentDescription="@string/strike_out"
                android:onClick="OnStrikeOutButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_strike" />

            <ImageButton
                android:id="@+id/inkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/ink"
                android:onClick="OnInkButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_pen" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Accept"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottombar_height"
            android:background="@drawable/bg_lowerbutton">

            <ImageButton
                android:id="@+id/cancelAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelAcceptButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_action_content_remove" />

            <TextView
                android:id="@+id/annotType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/acceptButton"
                android:layout_toRightOf="@+id/cancelAcceptButton"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/md_light_blue"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/accept"
                android:onClick="OnAcceptButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_check" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottombar_height"
            android:background="@drawable/bg_lowerbutton">

            <ImageButton
                android:id="@+id/cancelDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/cancel"
                android:onClick="OnCancelDeleteButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_action_content_remove" />

            <TextView
                android:id="@+id/deleteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/deleteButton"
                android:layout_toRightOf="@+id/cancelDeleteButton"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:contentDescription="@string/delete"
                android:onClick="OnDeleteButtonClick"
                android:padding="8dp"
                android:src="@drawable/ic_trash" />
        </RelativeLayout>
    </ViewAnimator>
</RelativeLayout>
